WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
67374
REGRESSION (
r93247
): 2 http/tests/misc tests failing on SnowLeopard Intel Release (Tests)
https://bugs.webkit.org/show_bug.cgi?id=67374
Summary
REGRESSION (r93247): 2 http/tests/misc tests failing on SnowLeopard Intel Rel...
Ryosuke Niwa
Reported
2011-09-01 00:56:25 PDT
http/tests/misc/authentication-redirect-3/authentication-sent-to-redirect-same-origin-with-location-credentials.html and http/tests/misc/authentication-redirect-2/authentication-sent-to-redirect-same-origin.html started failing on SnowLeopard Intel Release (Tests) in
r93247
<
http://trac.webkit.org/changeset/93247
>.
http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r93246%20(32358)/results.html
passed
http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r93247%20(32359)/results.html
failed
Attachments
proposed fix
(2.58 KB, patch)
2011-09-01 10:51 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2011-09-01 10:48:44 PDT
I have a fix.
Alexey Proskuryakov
Comment 2
2011-09-01 10:51:06 PDT
Created
attachment 105991
[details]
proposed fix
WebKit Review Bot
Comment 3
2011-09-01 12:49:28 PDT
Comment on
attachment 105991
[details]
proposed fix Clearing flags on attachment: 105991 Committed
r94333
: <
http://trac.webkit.org/changeset/94333
>
WebKit Review Bot
Comment 4
2011-09-01 12:49:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug