REGRESSION (r93247): 2 http/tests/misc tests failing on SnowLeopard Intel Release (Tests) https://bugs.webkit.org/show_bug.cgi?id=67374

Reviewed by Simon Fraser.

* platform/network/cf/ResourceHandleCFNet.cpp:
(WebCore::applyBasicAuthorizationHeader):
* platform/network/mac/ResourceHandleMac.mm:
(WebCore::applyBasicAuthorizationHeader):
Some versions of CFNetwork carry along an Authorization header, some don't. We shouldn't
repeat its value twice, this is not one of those headers that allow comma separated lists
of values.


Canonical link: https://commits.webkit.org/83242@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@94333 268f45cc-cd09-0410-ab3c-d52691b4dbfc